--- a/1.html
+++ b/1.html
@@ -4,16 +4,11 @@
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
 
-    <link rel="stylesheet" href="reset.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
-
-    <style>
-      body { font-family: 'PT Sans', sans-serif;
-      }
-    </style>
+    <link rel="stylesheet" href="stylesheets/style.css">
   </head>
   <body>
     <h1>Дом Наркомфина</h1>
+
     <p>
       Дом Наркомфина — один из ключевых памятников жилой архитектуры
       конструктивизма, «опытный дом переходного типа». Построен в 1928—1930
@@ -30,6 +25,7 @@
       М.Я. Гинзбурга.
     </p>
 
+
     <ul>
       <li>1 История создания</li>
       <li>2 Участок</li>
@@ -42,16 +38,76 @@
     </ul>
 
     <h2>История создания</h2>
-    <p>Дом Наркомфина, или 2-й дом Совнаркома РСФСР, стал одним из
-       экспериментальных домов, построенных по результатам теоретических
-       исследований Секции типизации Стройкома РСФСР, работавшей в 1928-1929 годы
-       под руководством М.Я. Гинзбурга. Работе секции предшествовал конкурс на
-       «эскизный проект жилого дома трудящихся», проведенный журналом
-       «Современная архитектура» (Гинзбург подал на конкурс проект «Коммунального
-       дома А-1»), выставка проектов конкурса в 1927 году.[3], и строительство
-       дома Госстраха на Малой Бронной (1926-1927, М.Я. Гинзбург и В.Н. Владимиров).
-       И журнал, и конкурс, и работа Секции типизации были проектами ОСА
-       (Объединения современных архитекторов).
+    <p>
+      Дом Наркомфина, или 2-й дом Совнаркома РСФСР, стал одним из
+      экспериментальных домов, построенных по результатам теоретических
+      исследований Секции типизации Стройкома РСФСР, работавшей в 1928-1929 годы
+      под руководством М.Я. Гинзбурга. Работе секции предшествовал конкурс на
+      «эскизный проект жилого дома трудящихся», проведенный журналом
+      «Современная архитектура» (Гинзбург подал на конкурс проект «Коммунального
+      дома А-1»), выставка проектов конкурса в 1927 году.[3], и строительство
+      дома Госстраха на Малой Бронной (1926-1927, М.Я. Гинзбург и В.Н. Владимиров).
+      И журнал, и конкурс, и работа Секции типизации были проектами ОСА
+      (Объединения современных архитекторов).
+    </p>
+
+    <p>
+      Работа Секции типизации, подробно описанная М.Я. Гинзбургом в книге «Жилище»[4],
+      началась с анализа типологии «дореволюционного «доходного дома» и состояла в достижении
+      максимально эффективных параметров использования объема жилого пространства
+      при сохранении его комфортности. Было разработано несколько типов квартир-ячеек,
+      названных буквами от A до F. Результаты исследования секции М.Я. Гинзбург доложил
+      на пленуме Стройкома РСФСР, где было принято постановление, рекомендовавшее
+      несколько жилых ячеек к массовому строительству, а остальные — к опытно-показательному,
+      начиная с 1928 года. Согласно этому постановлению было построено шесть «экспериментальных
+      коммунальных домов переходного типа» в Москве, Свердловске и Саратове, причем в
+      строительстве трех из них участвовал сам М.Я. Гинзбург. С.О. Хан-Магомедов называет
+      дом Наркомата финансов самым интересным из этих шести домов [1].-
+    </p>
+
+
+    <p>
+      Определенную роль в формулировании и решении проблемы создания жилого дома нового
+      типа на примере дома Наркомата финансов сыграл Николай Милютин, известный как автор
+      схем социалистического расселения и градостроительных концепций соцгорода[5], который в указанные
+      годы (1924—1929) исполнял обязанности наркома финансов РСФСР и выступал в качестве
+      заказчика жилого комплекса. По теории Милютина, отражавшей правительственную установку[6],
+      «значительное повышение жизненного уровня рабочих и развитие обобществлённых форм обслуживания
+      бытовых нужд трудящихся (общественное питание, ясли, детские сады, клубы и т.п.) постепенно
+      уничтожают значение семьи как хозяйственного соединения. Этот процесс неизбежно приведёт,
+      в конечном счёте, к полной переделке семейных форм общежития. <...> Задача раскрепощения
+      женщины от мелкого домашнего хозяйства и вовлечение её в произодство заставляет нас ставить
+      вопрос о всемерном содействии этому процессу»[7]. Задача реализации этих принципов и была
+      поставлена перед авторами проекта. Согласно Екатерине Милютиной, это был дом «нового быта»[8].
+    </p>
+
+    <p>
+      Сметная стоимость строительства составила 10 млн. рублей[9]. Строительство жилого
+      корпуса осуществлялось под наблюдением комиссии, возглавляемой Н.А. Милютиным.
+      Коммунальный корпус и корпус прачечной строились без утвержденных чертежей[10].
+    </p>
+
+    <h2>Идеология</h2>
+
+    <p>
+      Идеи, связанные с планировочной и объемной структурой, также как и с функциональным
+      наполнением дома, изложены в книге М.Я. Гинзбурга «Жилище», где работе Секции типизации
+      посвящена одна глава, а дому Наркомфина — три главы[11]; идеология дома также
+      была озвучена М.Я. Гинзбургом на пленуме Стройкома[1]. Согласно М.Я. Гинзбургу,
+      анализ типов жилья в доходном доме показывает, что его «экономический эффект» был более
+      высоким, чем «массовое жилищное строительство Москвы первых лет после революции»
+      (т.н. моссоветское строительство).
+    </p>
+
+    <p>
+      Работа Секции типизации шла по пути «урезывания и уплотнения обслуживающих площадей»
+      взятой за прототип типологии доходного дома: вначале удалили вторые лестницы и комнаты
+      домработниц, затем оптимизировали коридоры, передние, ванные комнаты и кухни,
+      сохраняя объем и высоту жилых помещений и урезая как площадь, так и высоту подсобных.
+      Приведенные в книге расчеты эффективности использования жилого пространства
+      построены на рассмотрении отношения кубатуры к жилой площади квартир и параметра
+      k (k=W/P, соотношение общей кубатуры здания к полезной площади жилых ячеек).
+      stМ.Я. Гинзбург ссылается как на расчеты, так и на «опытную работу передовых архитекторов Запада».
     </p>
 
   </body>
